Got Backbone to work with the form.

--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -67,7 +67,7 @@
 			
 			</fieldset>
 			
-			<button type="submit" class="btn btn-default">Submit</button>
+			<button id="createShiftReportButton" class="btn btn-default">Submit</button>
 		</form>
     </script>
     
