Fixed styling issues caused by mixing different size classes.

--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -45,8 +45,8 @@
     <script type='text/template' id='application-view-template'>
         <div class='container-fluid'>
             <div class='row'>
-                <div id='resident-list-region' class='col-xs-3'></div>
-                <div id='selected-resident-region' class='col-md-6'></div>
+                <div id='resident-list-region' class='col-sm-3'></div>
+                <div id='selected-resident-region' class='col-sm-9'></div>
             </div>
         </div>
     </script>
@@ -59,14 +59,14 @@
         <form class='form-horizontal'>
           <fieldset>
             <div class='form-group'>
-              <label class='col-xs-3 control-label' for='textinput'>Name:</label>
-              <div class='col-xs-6'>
+              <label class='col-sm-3 control-label' for='textinput'>Name:</label>
+              <div class='col-sm-6'>
                 <input type='text' class='form-control input-md' placeholder='{{name}}'>
               </div>
             </div>
             <div class='form-group'>
-              <label class='col-xs-3 control-label' for='textinput'>Longer Name:</label>
-              <div class='col-xs-6'>
+              <label class='col-sm-3 control-label' for='textinput'>Longer Name:</label>
+              <div class='col-sm-6'>
                 <input type='text' class='form-control input-md' placeholder='{{name}}'>
               </div>
             </div>
