--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -65,9 +65,12 @@
               </div>
             </div>
             <div class='form-group'>
-              <label class='col-sm-3 control-label' for='textinput'>Longer Name:</label>
-              <div class='col-sm-6'>
-                <input type='text' class='form-control input-md' placeholder='{{name}}'>
+              <label class='col-sm-3 control-label' for='textinput'>Birthdate:</label>
+              <div class='input-group date col-sm-6' id='birthdate-picker'>
+                  <input type='text' class="form-control" data-date-format="DD/MM/YYYY"/ placeholder='{{formatDate 'day' birthdate}}'>
+                  <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
               </div>
             </div>
           </fieldset>
@@ -79,7 +82,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.2.2/backbone.marionette.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js" type="text/javascript"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js" type="text/javascript"></script>
+    <script src="bootstrap.js" type="text/javascript"></script>    
     <script src="script.js" type="text/javascript"></script>
     
   </body>
