--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -32,7 +32,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Residents</a></li>
+            <li><a href="#residents">Residents</a></li>
             <li><a href="#shiftReport">Shift Report</a></li>
             <li><a href="#incidentReport">Incident Report</a></li>
           </ul>
