--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -56,6 +56,7 @@
     </script>
     
     <script id='selected-resident-template' type='text/x-handlebars-template'>
+        {{#if name}}
         <form class='form-horizontal'>
           <fieldset>
             <div class='form-group'>
@@ -85,6 +86,7 @@
             </div>
           </fieldset>
         </form>
+        {{/if}}
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
