--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -56,7 +56,6 @@
     </script>
     
     <script id='selected-resident-template' type='text/x-handlebars-template'>
-        {{#if name}}
         <form class='form-horizontal'>
           <fieldset>
             <div class='form-group'>
@@ -65,7 +64,7 @@
                 <input id='name-input'
                        type='text' 
                        class='form-control input-md' 
-                       value='{{name}}'>
+                       value='{{resident.name}}'>
               </div>
             </div>
             <div class='form-group'>
@@ -75,10 +74,21 @@
                          type='text' 
                          class="form-control" 
                          data-date-format="DD/MM/YYYY"/ 
-                         value='{{formatDate 'day' birthdate}}'>
+                         value='{{formatDate 'day' resident.birthdate}}'>
                   <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
                   </span>
+              </div>
+            </div>
+            <div class='form-group'>
+              <label class='col-sm-3 control-label' for='textinput'>House:</label>
+              <div class='col-sm-6'>
+              <select id='houseid-input' class='form-control'>
+                <option value='{{selectedHouse.id}}'>{{selectedHouse.name}}</option>
+                {{#each houses}}
+                <option value='{{id}}'>{{name}}</option>
+                {{/each}}
+              </select>
               </div>
             </div>
             <div class='form-group'>
@@ -86,7 +96,6 @@
             </div>
           </fieldset>
         </form>
-        {{/if}}
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
