--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -46,7 +46,16 @@
         <div class='container-fluid'>
             <div class='row'>
                 <div id='resident-list-region' class='col-sm-3'></div>
-                <div id='selected-resident-region' class='col-sm-9'></div>
+                <div class='col-sm-9'>
+                    <div class='row'>
+                        <ul class='nav nav-tabs' role='tablist'>
+                            <li role='presentation' class='active'><a href="#">Info</a></li>
+                            <li role='presentation'><a href='#'>Care</a></li>
+                        </ul>
+                    <div class='row'>
+                        <div id='selected-resident-region'></div>
+                    </div>
+                </div>
             </div>
         </div>
     </script>
