Fixed text boxes in ShiftReport view.

--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -167,10 +167,9 @@
           <div class='form-group'>
             <label class='col-sm-3 control-label' for='textinput'>{{name}}</label>
             <div class='col-sm-6'>
-              <input id='input'
+              <textarea id='resident-{{id}}'
                      type='text' 
-                     class='form-control input-md' 
-                     value='{{resident.name}}'>
+                     class='form-control input-md' />
             </div>
           </div>
         </fieldset>
