--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -112,20 +112,32 @@
     <script id='create-shift-report-template' type='text/x-handlebars-template'>
         <div class='container-fluid'>
           <form class='form-horizontal'>
-            <div id='create-shift-report-top-template'></div>
-            <div id='create-shift-report-bottom-template'></div>
+            <div id='create-shift-report-top'></div>
+            <div id='create-shift-report-bottom'></div>
+            <div id='create-shift-report-submit'></div>
           </form>
+        </div>
+    </script>
+    
+    <script id='create-shift-report-submit-template' type='text/x-handlebars-template'>
+        <div class='form-group'>
+            <button type="submit" class="btn btn-default col-sm-1 col-sm-offset-8">Submit</button>
         </div>
     </script>
 
     <script id='create-shift-report-top-template' type='text/x-handlebars-template'>
         <fieldset>
           <div class='form-group'>
-            <label class='col-sm-3 control-label' for='textinput'>Title:</label>
-            <div class='col-sm-6'>
-              <input id='name-input'
-                     type='text' 
-                     class='form-control input-md'>
+            <label class='col-sm-3 control-label' for='textinput'>Date:</label>
+            <div class='input-group date col-sm-6' id='date-picker'>
+              <input id='date-input'
+                         type='text' 
+                         class="form-control" 
+                         data-date-format="DD/MM/YYYY"/ 
+                         value='{{today}}'>
+              <span class="input-group-addon">
+                <span class="glyphicon glyphicon-calendar"></span>
+              </span>
             </div>
           </div>
         </fieldset>
@@ -134,6 +146,7 @@
             <label class='col-sm-3 control-label' for='textinput'>Shift:</label>
             <div class='col-sm-6'>
               <select id='shift-input' class='form-control'>
+                <option disabled selected> -- select a shift -- </option>
                 <option>AM</option>
                 <option>PM</option>
                 <option>Graveyard</option>
@@ -147,13 +160,19 @@
             <div class='col-sm-6'>
             <div class="radio">
               <label>
-                <input id="inlineradio1" name="sampleinlineradio" value="option1" type="radio">Yes
+                <input id="keys-accounted-for-yes" 
+                       name="keys-accounted-for-radio" 
+                       value="option1" 
+                       type="radio">Yes
               </label>
             </div>
             <div class="radio ">
               <label>
-                <input id="inlineradio1" name="sampleinlineradio" value="option1" type="radio">No
-                <input type="text" class='form-inline input-md' />​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+                <input id="keys-accounted-for-no" 
+                       name="keys-accounted-for-radio" 
+                       value="option1" 
+                       type="radio">No
+                <input id='keys-accounted-for-reason' type="text" class='form-inline input-md' />​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
               </label>
             </div>
             </div>
@@ -179,21 +198,22 @@
           <div class='form-group'>
             <label class='col-sm-3 control-label' for='textinput'>{{residentName}}</label>
             <div class='col-sm-6'>
-              <input type='text' class='form-control margin-bottom input-md' placeholder='Summary'/>
-              <textarea type='text' class='form-control input-md' />
+              <input id='summary' type='text' class='form-control margin-bottom input-md' placeholder='Summary'/>
+              <textarea id='notes' type='text' class='form-control input-md' />
             </div>
           </div>
         </fieldset>
     </script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
+    <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="lib/bootstrap-3.3.1.min.js" type="text/javascript"></script>
+    <script src="lib/underscore-1.7.0.min.js" type="text/javascript"></script>
+    <script src="lib/backbone-1.1.2.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.2.2/backbone.marionette.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js" type="text/javascript"></script>
+    <script src="common.js" type="text/javascript"></script>
     <script src="shift-report.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
     
