Made progress towards storing shift reports.
Need to populate the on shift field.

--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -199,7 +199,7 @@
             <label class='col-sm-3 control-label' for='textinput'>{{residentName}}</label>
             <div class='col-sm-6'>
               <input id='summary' type='text' class='form-control margin-bottom input-md' placeholder='Summary'/>
-              <textarea id='notes' type='text' class='form-control input-md' />
+              <textarea id='notes' type='text' class='form-control input-md' placeholder='Notes' />
             </div>
           </div>
         </fieldset>
