--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -233,10 +233,10 @@
     <script src="lib/bootstrap-3.3.1.min.js" type="text/javascript"></script>
     <script src="lib/underscore-1.7.0.min.js" type="text/javascript"></script>
     <script src="lib/backbone-1.1.2.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.2.2/backbone.marionette.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js" type="text/javascript"></script>
+    <script src="lib/backbone.marionette-2.0.0.min.js" type="text/javascript"></script>
+    <script src="lib/handlebars-2.0.0.min.js" type="text/javascript"></script>
+    <script src="lib/bootstrap-datepicker-1.3.0.min.js" type="text/javascript"></script>
+    <script src="lib/moment-2.8.3.min.js" type="text/javascript"></script>
     <script src="common.js" type="text/javascript"></script>
     <script src="shift-report.js" type="text/javascript"></script>
     <script src='selected-resident-shift-reports.js' type='text/javascript'></script>
