--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -66,6 +66,7 @@
         {{#if resident}}
         <form class='form-horizontal'>
           <fieldset>
+            <p>
             <div class='form-group'>
               <label class='col-sm-3 control-label' for='textinput'>Name:</label>
               <div class='col-sm-6'>
@@ -229,11 +230,23 @@
         </fieldset>
     </script>
     
+    <script id='shift-report-list-with-footer-template' type='text/x-handlebars-template'>
+        <div>
+          <div id='shift-report-list'></div>
+          <button id='shift-report-list-loading-button' 
+                  type='button' 
+                  data-loading-text='Loading...' 
+                  class='btn btn-primary'>
+            Load More
+          </button>
+        </div>
+    </script>
+
     <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="lib/bootstrap-3.3.1.min.js" type="text/javascript"></script>
     <script src="lib/underscore-1.7.0.min.js" type="text/javascript"></script>
     <script src="lib/backbone-1.1.2.min.js" type="text/javascript"></script>
-    <script src="lib/backbone.marionette-2.0.0.min.js" type="text/javascript"></script>
+    <script src="lib/backbone.marionette-2.2.0.min.js" type="text/javascript"></script>
     <script src="lib/handlebars-2.0.0.min.js" type="text/javascript"></script>
     <script src="lib/bootstrap-datepicker-1.3.0.min.js" type="text/javascript"></script>
     <script src="lib/moment-2.8.3.min.js" type="text/javascript"></script>
