Got rid of magic data- attributes in favor of .modal() call.

--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -63,9 +63,7 @@
     <script type='text/template' id='resident-list-template'>
         <ul class='resident-list-top-region list-group'></ul>
         <div class='resident-list-bottom-region'> 
-          <button class='btn btn-primary create-resident-btn'
-                  data-toggle='modal'
-                  data-target='.create-resident-modal'>
+          <button class='btn btn-primary create-resident-btn'>
             <span class="glyphicon glyphicon-plus-sign"></span>
             Create Resident
           </a>
