--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -80,49 +80,46 @@
           </div>
           <div class="modal-body">
             <form class='form-horizontal'>
-          <fieldset>
-            <p>
-            <div class='form-group'>
-              <label class='col-sm-3 control-label' for='textinput'>Name:</label>
-              <div class='col-sm-6'>
-                <input id='name-input'
-                       type='text' 
-                       class='form-control input-md' 
-                       value='{{resident.name}}'>
-              </div>
+              <fieldset>
+                <p>
+                <div class='form-group'>
+                  <label class='col-sm-3 control-label' for='textinput'>Name:</label>
+                  <div class='col-sm-6'>
+                    <input type='text' 
+                           class='form-control input-md name-input'>
+                  </div>
+                </div>
+                <div class='form-group'>
+                  <label class='col-sm-3 control-label' for='textinput'>Birthdate:</label>
+                  <div class='input-group date col-sm-6 birthdate-picker'>
+                      <input type='text' 
+                             class="form-control birthdate-input" 
+                             data-date-format='MM/DD/YYYY' 
+                             placeholder='MM/DD/YYYY'>
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                  </div>
+                </div>
+                <div class='form-group'>
+                  <label class='col-sm-3 control-label' for='textinput'>House:</label>
+                  <div class='col-sm-6'>
+                    <select class='form-control houseid-input'>
+                        <option disabled selected> -- select a house -- </option>
+                        {{#each houses}}
+                        <option value='{{id}}'>{{name}}</option>
+                        {{/each}}
+                    </select>
+                  </div>
+                </div>
+              </fieldset>
+            </form>
             </div>
-            <div class='form-group'>
-              <label class='col-sm-3 control-label' for='textinput'>Birthdate:</label>
-              <div class='input-group date col-sm-6' id='birthdate-picker'>
-                  <input id='birthdate-input'
-                         type='text' 
-                         class="form-control" 
-                         data-date-format="DD/MM/YYYY"/ 
-                         value='{{formatDate 'day' resident.birthdate}}'>
-                  <span class="input-group-addon">
-                    <span class="glyphicon glyphicon-calendar"></span>
-                  </span>
-              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary save-resident-button">Save changes</button>
             </div>
-            <div class='form-group'>
-              <label class='col-sm-3 control-label' for='textinput'>House:</label>
-              <div class='col-sm-6'>
-                <select id='houseid-input' class='form-control'>
-                    <option value='{{selectedHouse.id}}'>{{selectedHouse.name}}</option>
-                    {{#each houses}}
-                    <option value='{{id}}'>{{name}}</option>
-                    {{/each}}
-                </select>
-              </div>
-            </div>
-          </fieldset>
-        </form>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
       </div>
     </div>
     </script>
@@ -151,7 +148,7 @@
                   <input id='birthdate-input'
                          type='text' 
                          class="form-control" 
-                         data-date-format="DD/MM/YYYY"/ 
+                         data-date-format="MM/DD/YYYY"/ 
                          value='{{formatDate 'day' resident.birthdate}}'>
                   <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
@@ -215,7 +212,7 @@
               <input id='date-input'
                          type='text' 
                          class="form-control" 
-                         data-date-format="DD/MM/YYYY"/ 
+                         data-date-format="MM/DD/YYYY"/ 
                          value='{{formatDate 'day' today}}'>
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
