--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -166,9 +166,8 @@
                 </select>
               </div>
             </div>
-            <div class='form-group'>
-              <button type="submit" class="btn btn-default col-sm-1 col-sm-offset-8">Save</button>
-            </div>
+            <button type='button' class='btn btn-danger delete-resident-button'>Delete</button>
+            <button type='button' class='btn btn-default save-resident-button'>Save</button>
           </fieldset>
         </form>
         {{else}}
@@ -382,6 +381,7 @@
     <script src="common.js" type="text/javascript"></script>
     <script src="resident-list.js" type="text/javascript"></script>
     <script src="shift-report.js" type="text/javascript"></script>
+    <script src='selected-resident-info.js' type='text/javascript'></script>
     <script src='selected-resident-shift-reports.js' type='text/javascript'></script>
     <script src='shift-report-view.js' type='text/javascript'></script>
     <script src="script.js" type="text/javascript"></script>
