--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -48,13 +48,10 @@
         <div class='container-fluid'>
           <div class='row'>
             <div id='resident-list-region' class='col-sm-3'></div>
+            <hr class='visible-xs-block' />
             <div class='col-sm-9'>
-              <div class='row'>
-                <div class='selected-resident-tabs'></div>
-              </div>
-              <div class='row'>
-                <div class='selected-resident-region'></div>
-              </div> 
+              <div class='selected-resident-tabs'></div>
+              <div class='selected-resident-region'></div>
             </div>  
           </div>
         </div>
