--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel='stylesheet' href="styles.css"> 
+    <link rel='stylesheet' href="css/styles.css"> 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -375,13 +375,13 @@
     <script src="lib/bootstrap-datepicker-1.3.0.min.js" type="text/javascript"></script>
     <script src="lib/moment-2.8.3.min.js" type="text/javascript"></script>
     
-    <script src="common.js" type="text/javascript"></script>
-    <script src="resident-list.js" type="text/javascript"></script>
-    <script src="shift-report.js" type="text/javascript"></script>
-    <script src='selected-resident-info.js' type='text/javascript'></script>
-    <script src='selected-resident-shift-reports.js' type='text/javascript'></script>
-    <script src='shift-report-view.js' type='text/javascript'></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
+    <script src="js/resident-list.js" type="text/javascript"></script>
+    <script src="js/shift-report.js" type="text/javascript"></script>
+    <script src='js/selected-resident-info.js' type='text/javascript'></script>
+    <script src='js/selected-resident-shift-reports.js' type='text/javascript'></script>
+    <script src='js/shift-report-view.js' type='text/javascript'></script>
+    <script src="js/script.js" type="text/javascript"></script>
     
   </body>
 </html>
