--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -38,6 +38,9 @@
             <li><a href="#shiftReport">Shift Report</a></li>
             <li><a href="#incidentReport">Incident Report</a></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#account">Account</a></li>
+          </ul>
         </div>
       </div>
     </div>  
@@ -365,6 +368,43 @@
           </form>
         </div>
     </script>
+    
+    <script id='account-view-template' type='text/x-handlebars-template'>
+        <div class='container-fluid'>
+          <div class='row'>
+            <form class='form-horizontal'>
+              <fieldset disabled>
+                <div class='form-group'>
+                  <label class='col-sm-3 control-label'>Email:</label>
+                  <div class='col-sm-6'>
+                    <input type="text" class="form-control" value='{{user.name}}'>
+                  </div>
+                </div>
+              </fieldset>
+              <fieldset>
+                <div class='form-group'>
+                  <label class='col-sm-3 control-label'>Password:</label>
+                  <div class='col-sm-6'>
+                    {{#if changingPassword}}
+                      <input type="password" class="form-control new-password-input" placeholder="Password" value="{{newPassword}}">
+                      <p><p>
+                      <input type="password" class="form-control confirm-password-input" placeholder="Confirm" value="{{newPasswordConfirm}}">
+                      <p><p>
+                      {{#if passwordsMatch}}
+                        <button class='btn btn-primary confirm-change-password-btn' type='button'>Confirm</button>
+                      {{else}}
+                        <button class='btn btn-danger disabled' type='button'>Passwords do not match</button>
+                      {{/if}}
+                      {{else}}
+                      <button class='btn btn-primary change-password-btn' type='button'>Change Password</button>
+                    {{/if}}
+                  </div>
+                </div>
+              <fieldset>
+            </form>
+          </div>
+        </div>
+    </script>
 
     <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="lib/bootstrap-3.3.1.min.js" type="text/javascript"></script>
@@ -376,6 +416,7 @@
     <script src="lib/moment-2.8.3.min.js" type="text/javascript"></script>
     
     <script src="js/common.js" type="text/javascript"></script>
+    <script src="js/account.js" type="text/javascript"></script>
     <script src="js/resident-list.js" type="text/javascript"></script>
     <script src="js/shift-report.js" type="text/javascript"></script>
     <script src='js/selected-resident-info.js' type='text/javascript'></script>
