Changed ResidentListViewWithFooter to a LayoutView.

--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -61,8 +61,8 @@
         </div>
     </script>
     
-    <script type='text/template' id='resident-list-template'>
-        <ul class='resident-list-top-region list-group'></ul>
+    <script type='text/template' id='resident-list-with-create-template'>
+        <div class='resident-list-top-region list-group'></div>
         <div class='resident-list-bottom-region'> 
           <button class='btn btn-primary create-resident-btn'>
             <span class="glyphicon glyphicon-plus-sign"></span>
