--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -450,7 +450,7 @@
     <script src='js/selected-resident-shift-reports.js' type='text/javascript'></script>
     <script src='js/shift-report-view.js' type='text/javascript'></script>
     <script src="js/admin/admin-houses.js" type="text/javascript"></script>
-    <script src="js/admin/admin-users.js" type="text/javascript"></script>
+    <script src="js/admin/admin-residents.js" type="text/javascript"></script>
     <script src="js/admin/admin.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
     
